--- a/homeWork/dataProcess/1.ipynb
+++ b/homeWork/dataProcess/1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "a7332d0c-3f4b-466c-8e89-c04ba4795d7b",
    "metadata": {},
    "outputs": [],
@@ -12,59 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "51b6383c-c2d0-4694-97dc-5413550aff82",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = {1,9,5,7}"
+    "def tri_wave(x, c, c0, hc):\n",
+    "        def tf(x):\n",
+    "                x = x - int(x)\n",
+    "                if x >= c: r = 0.0\n",
+    "                elif x < c0: r = x / c0 * hc\n",
+    "                else: r = (c-x) / (c-c0)*hc\n",
+    "                return r\n",
+    "        return np.frompyfunc(tf, 1, 1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "95a22862-7712-4394-a8ea-4e950ff899e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s_a = np.array(s)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "70f89683-6439-4966-be16-37553e4acd03",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array({1, 5, 9, 7}, dtype=object)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s_a\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "e2c07c41-d48e-459a-a2c3-774242479714",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.arange(16).reshape(4,4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "fe3d956e",
    "metadata": {},
    "outputs": [
     {
@@ -76,14 +42,56 @@
        "       [12, 13, 14, 15]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a"
+    "x = np.arange(0, 16, 1).reshape(4,-1)\n",
+    "x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "70f89683-6439-4966-be16-37553e4acd03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0, 0.0, 0.0, 0.0],\n",
+       "       [0.0, 0.0, 0.0, 0.0],\n",
+       "       [0.0, 0.0, 0.0, 0.0],\n",
+       "       [0.0, 0.0, 0.0, 0.0]], dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = tri_wave(x, 0.6, 0.4, 1.0)(x)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2c07c41-d48e-459a-a2c3-774242479714",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe3d956e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
